[artf542682] Admin UI code review  - Users import alignment issue.

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
@@ -2223,6 +2223,10 @@ input[class *='sample'] {
    width: 35%;
 }
 
+.userwidth {
+   width: 19%;
+}
+
 div[class *='syncTable']  {
 	margin-top: 4px;
 }
